# django-to-rest

./: .gitignore  404.html  LICENSE.md  README.md  README.rst  code_of_conduct.md  index.html  mkdocs.yml  setup.cfg  sitemap.xml
.github/workflows/: ci.yml  release.yml
community/changelogs/: index.html
community/contributing_to_django_to_rest/: index.html
docs/: code_of_conduct.md  index.md  quickstart.md
docs/community/: changelogs.md  contributing_to_django_to_rest.md
docs/full_guide/: adding_auth.md  adding_custom_auth.md  adding_custom_classes.md  adding_custom_filtering.md  adding_custom_permission.md  adding_custom_serializer.md  adding_custom_throttling.md  adding_methods.md  adding_permission.md  adding_throttling.md  marking_model_for_REST.md  relationships.md  versioning.md  viewnames.md
docs_overrides/: main.html
full_guide/adding_auth/: index.html
full_guide/adding_custom_auth/: index.html
full_guide/adding_custom_classes/: index.html
full_guide/adding_custom_filtering/: index.html
full_guide/adding_custom_permission/: index.html
full_guide/adding_custom_serializer/: index.html
full_guide/adding_methods/: index.html
full_guide/adding_permission/: index.html
full_guide/adding_throttling/: index.html
full_guide/marking_model_for_REST/: index.html
full_guide/relationships/: index.html
full_guide/versioning/: index.html
full_guide/viewnames/: index.html
quickstart/: index.html
search/: search_index.json
tests/: db.sqlite3
tests/test_basics/: apps.py  filterset.py  models.py  serializers.py  tests.py  view_params.py
tests/test_basics_defaults/: apps.py  models.py  tests.py
tests/test_many_to_many/: apps.py  models.py  tests.py
tests/test_many_to_one/: apps.py  models.py  tests.py  view_params.py
tests/test_one_to_one/: apps.py  models.py  (+1 more)
to_rest/: apps.py  cfg.py  constants.py  decorators.py  exceptions.py  serializers.py  utils.py  views.py
(+19 files in other folders)
