[metadata]
name = django-to-rest
version = 0.1
description = A library to expose rest api(s) for a django app (quiet quickly) with minimum efforts
long_description = file: README.rst
author = Anupam Sharma
author_email = anupammrg@gmail.com
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0.5
    djangorestframework >= 3.13.10
    django-filter >= 22.1
