[metadata]
name = django-to-rest
version = 1.0.0b2
description = A library to expose rest api(s) for a django app (quiet quickly) with minimum efforts
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Anupam Sharma
author_email = anupammrg@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages =
    to_rest
python_requires = >=3.8
install_requires =
    Django == 4.0.5
    djangorestframework == 3.13.1
    django-filter == 22.1
